# ollama-tray

./: .gitignore  README.md  config.properties  ollama_tray.py  ollama_tray_linux.py  pyproject.toml  requirements-linux.txt  requirements.txt  structure.md
.github/workflows/: release.yml
linux/: install.sh  ollama-tray.spec
linux/docs/amd/: configuration-reference-AMD-RX7900-xtx.md
ollama_tray/: __init__.py  __main__.py  _startup.py  checks.py  cli.py  config.py  constants.py  dialog.py  icon.py  settings_dialog.py  stats.py  tray.py
ollama_tray/platform/: __init__.py  linux.py  windows.py
tests/: test_frozen_streams.py
themes/: black.properties  dark.properties  light.properties
windows/: build.ps1  install.ps1  ollama-tray.spec  setup.spec  setup_installer.py
