[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ollama-tray"
version = "1.1.0-release-candidate"
description = "System tray manager for the Ollama service (Windows/Linux)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "pystray>=0.19",
    "Pillow>=10.0",
    "pywin32>=306",
    "psutil>=5.9",
    "watchdog>=4.0",
]

[project.scripts]
ollama-tray = "ollama_tray:main"

[project.urls]
Repository = "https://github.com/rodrigoazlima/ollama-tray"

[tool.setuptools.packages.find]
where = ["."]
include = ["ollama_tray*"]
